[package]
edition = "2021"
name = "aoc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
clap = "3.0.0-beta.5"
hyper = "0.14.15"
reqwest = {version = "0.11.7", features = ["cookies"]}
tokio = {version = "1.14.0", features = ["macros", "rt-multi-thread"]}
